krb-830 fix font size and gap

--- a/src/pages/SpecEditor/EditProduct/QuestionContent.module.scss
+++ b/src/pages/SpecEditor/EditProduct/QuestionContent.module.scss
@@ -107,7 +107,6 @@
   &__textCtrl {
     display: flex;
     flex-direction: column;
-    gap: var(--tiny-gap);
     max-width: 20%;
     font-weight: var(--font-weight-semibold);
   }
